--- a/src/styles/components/config.scss
+++ b/src/styles/components/config.scss
@@ -40,27 +40,71 @@
             height: 46px;
             border-radius: 100%;
             cursor: pointer;
+            transition: all 0.3s ease-in;
         }
 
         .bleu{
             background-color: #9EBEC9;
+            border: 4px solid #9EBEC9;
             
+            &:hover{
+                background-color: transparent;
+            }
         }
 
         .rouge{
             background-color: #DC7667;
+            border: 4px solid #DC7667;
+
+            &:hover{
+                background-color: transparent;
+            }
         }
 
         .mauve{
             background-color: #8C80CD;
+            border: 4px solid #8C80CD;
+
+            &:hover{
+                background-color: transparent;
+            }
         }
 
         .vert{
             background-color: #B6C99F;
+            border: 4px solid #B6C99F;
+
+            &:hover{
+                background-color: transparent;
+            }
         }
 
         .actif{
             border: 4px solid var(--color-black);
+        }
+
+        .actif.bleu{
+            &:hover{
+                background-color: #9EBEC9;
+            }
+        }
+
+        .actif.rouge{
+            &:hover{
+                background-color: #DC7667;
+            }
+        }
+
+        .actif.mauve{
+            &:hover{
+                background-color: #8C80CD;
+            }
+        }
+
+        .actif.vert{
+            &:hover{
+                background-color: #B6C99F;
+            }
         }
     }
 
