--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -8,12 +8,19 @@ header {
     }
 }
 
-.main__nav ul{
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-    gap: 40px;
-}
+.main__nav{
+    @media (max-width: 1200px) {
+        display: none;
+    }
+
+
+    ul{
+        list-style-type: none;
+        display: flex;
+        align-items: center;
+        gap: 40px;
+    }
+} 
 
 .logo{
     display: flex;
@@ -40,5 +47,93 @@ header {
         .top{
             color: var(--color-primary);
         }
+    }
+}
+
+.header__toggle {
+    --bar-height: 8px;
+    --bar-spacer: 6px;
+    --bar-width: 50px;
+
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0;
+    position: relative;
+    width: var(--bar-width);
+    height: var(--bar-width);
+    z-index: 10;
+
+    span {
+        background: var(--color-black);
+        height: var(--bar-height);
+        width: 100%;
+        position: absolute;
+        top: calc(50% - var(--bar-height) / 2);
+        left: calc(50% - var(--bar-width) / 2);
+        transition: 0.3s all ease-out;
+
+        &:nth-child(1) {
+            top: calc(
+                50% - var(--bar-height) / 2 - var(--bar-height) -
+                    var(--bar-spacer)
+            );
+        }
+
+        &:nth-child(3) {
+            top: calc(
+                50% - var(--bar-height) / 2 + var(--bar-height) +
+                    var(--bar-spacer)
+            );
+        }
+    }
+
+    .nav-is-active & {
+        span {
+            top: calc(50% - var(--bar-height) / 2);
+
+            &:nth-child(1) {
+                transform: rotate(45deg);
+            }
+
+            &:nth-child(2) {
+                transform: scaleX(0);
+            }
+
+            &:nth-child(3) {
+                transform: rotate(-45deg);
+            }
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
+}
+
+.nav_mobile{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    flex-direction: column;
+    gap: 32px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    a{
+        font-size: typo(32px, 48px);
+    }
+
+    ul{
+        list-style: none;
+    }
+
+    .nav-is-active &{
+        display: flex;
     }
 }
