--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -10,6 +10,55 @@
             display: grid;
             grid-template-columns: 5fr 7fr;
             align-items: center; 
+
+            @media (max-width: 1289px) {
+                grid-template-columns: 1fr 1fr;
+            }
+
+            @media (max-width: 1079px) {
+                display: block;
+                position: relative;
+                width: 100%;
+                height: 80vh;
+
+                .contenu{
+                    position: relative;
+                    z-index: 5;
+                    background-color: rgba($color: #f2f5f8, $alpha: 0.3);
+                    height: 100%;
+                }
+
+                .media{
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    z-index: 0;
+                    height: 100%;
+
+                    img{
+                        height: 100%;
+                        width: 100%;
+                        object-fit: cover;
+                    }
+                }
+
+            }
+
+            @media (max-width: $breakpoint-sm) {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+
+                .contenu{
+                    order: 1;
+                }
+
+                .media{
+                    position: static;
+                    align-self: center;
+                }
+            }
         }
     }
 }
@@ -34,6 +83,10 @@
     .btn-lg{
         margin-top: 32px;
     }
+
+    img{
+        height: 100%;
+    }
 }
 
 .sociaux{
@@ -42,12 +95,24 @@
     flex-direction: column;
     gap: 8px;
     position: absolute;
+    z-index: 10;
     top: 0;
-    right: 0;
+    right: calc(var(--spacing-xl) / 2);
     height: 100vh;
-    width: var(--spacing-xl);
     justify-content: center;
     align-items: center;
+
+    @media (max-width: $breakpoint-lg) {
+        right: calc(var(--spacing-lg) / 2);
+    }
+
+    @media (max-width: $breakpoint-md) {
+        right: calc(var(--spacing-md) / 2);
+    }
+
+    @media (max-width: $breakpoint-sm) {
+        display: none;
+    }
     
 
     svg{
