amélioration du js + travail responsive de config

--- a/src/styles/components/config.scss
+++ b/src/styles/components/config.scss
@@ -14,7 +14,12 @@
     img{
         width: 100%;
     }
+
+    @media (max-width: $breakpoint-sm) { 
+          grid-template-columns: 1fr;  
+    }
 }
+
 
 .options{
     display: flex;
@@ -23,11 +28,11 @@
     align-items: start;
 
     p{
-        font-size: #{typo(24px, 32px)};
+        font-size: #{typo(18px, 32px)};
     }
 
     .couleur_titre{
-        font-size: #{typo(18px, 24px)};
+        font-size: #{typo(16px, 24px)};
         font-weight: 300;
     }
 
@@ -41,6 +46,22 @@
             border-radius: 100%;
             cursor: pointer;
             transition: all 0.3s ease-in;
+        }
+
+        @media (max-width: 1200px) {
+            .couleur{
+                width: 40px;
+                height: 40px;
+            }           
+        }
+        
+        @media (max-width: $breakpoint-sm) {
+            gap: 16px;
+
+            .couleur{
+                width: 32px;
+                height: 32px;
+            }           
         }
 
         .bleu{
@@ -109,6 +130,6 @@
     }
 
     .prix{
-        font-size: #{typo(32px, 40px)};
+        font-size: #{typo(24px, 40px)};
     }
 }
