--- a/src/styles/elements/bouton.scss
+++ b/src/styles/elements/bouton.scss
@@ -38,8 +38,12 @@
 
 .btn-lg{
     padding: 16px 32px;
-    font-size: #{typo(24px, 32px)};
+    font-size: #{typo(20px, 32px)};
     font-weight: 400;
+
+    @media (max-width: 1200px) {
+        padding: 8px 16px;
+    }
 }
 
 .btn_appli{
