--- a/src/styles/components/avis.scss
+++ b/src/styles/components/avis.scss
@@ -3,5 +3,9 @@
 
     .wrapper{
         border-left: 1px solid var(--color-black);
+
+        @media (max-width: $breakpoint-sm) {
+            border: none;     
+        }
     }
 }
