--- a/src/styles/components/config.scss
+++ b/src/styles/components/config.scss
@@ -3,6 +3,10 @@
 
     .wrapper{
         border-left: 1px solid var(--color-black);
+
+        @media (max-width: $breakpoint-sm) {
+            border: none;     
+        }
     }
 }
 
