--- a/src/styles/components/spec.scss
+++ b/src/styles/components/spec.scss
@@ -4,6 +4,10 @@
     .wrapper{
         border-left: 1px solid var(--color-black);
 
+        @media (max-width: $breakpoint-sm) {
+            border: none;     
+        }
+
         h3{
             width: 55%;
 
