--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -63,7 +63,7 @@ header {
     position: relative;
     width: var(--bar-width);
     height: var(--bar-width);
-    z-index: 10;
+    z-index: 25;
 
     span {
         background: var(--color-black);
@@ -124,6 +124,8 @@ header {
     align-items: center;
     justify-content: center;
     text-align: center;
+    background-color: var(--color-white);
+    z-index: 20;
 
     a{
         font-size: typo(32px, 48px);
