--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -43,6 +43,7 @@
 @import 'components/avis';
 @import 'components/footer';
 @import 'components/point.scss';
+@import 'components/scrolly.scss';
 
 // UTILITIES
 // Utilitaires et classes auxiliaires avec possibilité de remplacer tout ce qui précède, par exemple masquer les éléments de la page
